chang report html

--- a/src/app/byengri/byengri/report/report.component.scss
+++ b/src/app/byengri/byengri/report/report.component.scss
@@ -250,3 +250,12 @@ img:hover {
   margin-left: -15px;
   width: 100% !important;
 }
+
+.clr-input {
+  text-align: center;
+}
+
+.textarea_01,
+.txt_c {
+  padding: 0px !important;
+}
