--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,9 +36,9 @@
           </table>
       </div>
   </div>
-  <div class="content-container">
-    <div class="content-area">
+  <div >
+     
       <router-outlet></router-outlet>
-    </div>
+    
   </div>
 </div>
